--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "libs/private-lib"]
   path = libs/private-lib
-  url = git@github.com:example-dash/private-lib.git
+  url = git@github.com:kknowles3/private-lib.git
